--- a/SemesterProject/.vscode/launch.json
+++ b/SemesterProject/.vscode/launch.json
@@ -4,8 +4,8 @@
             "type": "java",
             "name": "Launch App",
             "request": "launch",
+            "mainClass": "com.game.App",
             "vmArgs": "--module-path /usr/share/openjfx/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
-            "mainClass": "App",
             "projectName": "SemesterProject_2e7daad2"
         }
     ]
