--- a/SemesterProject/.vscode/settings.json
+++ b/SemesterProject/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
-    "java.project.sourcePaths": ["src"],
+    "java.project.sourcePaths": [
+        "src/main/java/"
+    ],
     "java.project.outputPath": "bin"
 }
