--- a/SemesterProject/.vscode/launch.json
+++ b/SemesterProject/.vscode/launch.json
@@ -6,6 +6,14 @@
             "request": "launch",
             "mainClass": "com.game.App",
             "vmArgs": "--module-path ../libs/javafx-sdk-11.0.2/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
+            "projectName": "SemesterProject"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "com.game.App",
+            "vmArgs": "--module-path ../libs/javafx-sdk-11.0.2/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
             "projectName": "SemesterProject_158978a2"
         },
         {
