- Add Rotation - Add Layer Support

--- a/SemesterProject/.vscode/launch.json
+++ b/SemesterProject/.vscode/launch.json
@@ -5,8 +5,7 @@
             "name": "Launch App",
             "request": "launch",
             "mainClass": "com.game.App",
-            "vmArgs": "--module-path /usr/share/openjfx/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
-            "projectName": "SemesterProject"
+            "projectName": "SemesterProject_158978a2"
         },
         {
             "type": "java",
@@ -14,7 +13,23 @@
             "request": "launch",
             "mainClass": "com.game.App",
             "vmArgs": "--module-path ../libs/javafx-sdk-11.0.2/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
-            "projectName": "SemesterProject_158978a2"
+            "projectName": "SemesterProject"
         },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "com.game.App",
+            "vmArgs": "--module-path /usr/share/openjfx/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
+            "projectName": "SemesterProject_Linux"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "com.game.App",
+            "vmArgs": "--module-path ../libs/javafx-sdk-11.0.2/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
+            "projectName": "SemesterProject_Windows"
+        }
     ]
 }
