--- a/SemesterProject/.vscode/launch.json
+++ b/SemesterProject/.vscode/launch.json
@@ -2,14 +2,7 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Launch App",
-            "request": "launch",
-            "mainClass": "com.game.App",
-            "projectName": "SemesterProject_158978a2"
-        },
-        {
-            "type": "java",
-            "name": "Launch App",
+            "name": "Flappy Bird FX (Windows)",
             "request": "launch",
             "mainClass": "com.game.App",
             "vmArgs": "--module-path ../libs/javafx-sdk-11.0.2/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
@@ -17,19 +10,11 @@
         },
         {
             "type": "java",
-            "name": "Launch App",
+            "name": "Flappy Bird FX (Linux)",
             "request": "launch",
             "mainClass": "com.game.App",
             "vmArgs": "--module-path /usr/share/openjfx/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
-            "projectName": "SemesterProject_Linux"
+            "projectName": "SemesterProject"
         },
-        {
-            "type": "java",
-            "name": "Launch App",
-            "request": "launch",
-            "mainClass": "com.game.App",
-            "vmArgs": "--module-path ../libs/javafx-sdk-11.0.2/lib --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web",
-            "projectName": "SemesterProject_Windows"
-        }
     ]
 }
